# CompMech-Stark-Hacks

./: .gitignore  README.md  Technical_Ford_Grasping.md  azure-management.md  guide.txt  pyproject.toml  requirements.txt
3d-prints/: Adapter Global Variables.txt  Part A (Flange to Adapter).SLDPRT  PartA-old.STL
3d-prints/our-own/: Camera.SLDPRT  Flange Assembly.SLDASM  Part A v1.STL  Part B (Adapter to Elec).SLDPRT  Part B Camera Case v1.STL  Part B Camera Case.SLDPRT  Raspberry Pi Block.SLDPRT  UR 10e End Effector Flange.SLDPRT
arduino/gripper_stepper/: gripper_stepper.ino
dashboard/: app.py
devpost/: description.md  titles.md
guides/: HEAPGrasp.md  guide.txt  message.md  rafal-plan.md
infra/azure/: .env.example  README.md  bootstrap_vm.sh  provision_vm.ps1  teardown.ps1
scripts/: compile_gqcnn_hef.sh  export_gqcnn_onnx.py  setup_venv.sh  train_gqcnn.py
src/gripper_cv/: __init__.py  app_classifier.py  app_heapgrasp.py  app_mjpeg.py  app_preview.py  camera.py  utils.py
src/gripper_cv/gripper/: __init__.py  arduino.py
src/gripper_cv_starter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_calibrate.py  test_domain_rand.py  test_export.py  test_grasp.py  test_grasp_learned.py  test_planner.py  test_reconstruct.py  test_segment.py
video/: Untitled  script-bad.md  script-slop.md  system-prompt.txt  youtube.md
video/no-arm/: script-synthesize.md  script.md
video/old-approach/: plan-vid.md  script-backbone.md  script.md  vibrant.md
video/with-arm/: script-synthesize.md
(+19 files in other folders)
